Fix shifting Rascals overlapping in hero section

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -13,3 +13,30 @@
 .hero-logo {
     width: 60%;
 }
+
+/*// Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) {
+
+}
+
+/*// Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) {
+
+}
+
+/*Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) {
+    .shifting-rascals {
+        min-height:100vh;
+    }
+}
+
+/*X-Large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) {
+
+}
+
+/*XX-Large devices (larger desktops, 1400px and up)*/
+@media (min-width: 1400px) {
+
+}
